cmake_minimum_required(VERSION 3.10)
project(leetcode)

add_subdirectory(128_longest_consecutive_sequence)
add_subdirectory(144_binary_tree_preorder_traversal)
add_subdirectory(958_check_completeness_of_a_binary_tree)
add_subdirectory(106_construct_binary_tree_from_inorder_and_postorder_traversal)
add_subdirectory(208_implement_trie__prefix_tree)
add_subdirectory(1472_design_browser_history)
add_subdirectory(211_design_add_and_search_words_data_structure)
add_subdirectory(605_can_place_flowers)
add_subdirectory(2348_number_of_zero-fille_subarrays)
add_subdirectory(2492_minimum_score_of_a_path_between_two_cities)
add_subdirectory(1319_number_of_operations_to_make_network_connected)
add_subdirectory(1466_reorder_routes_to_make_all_paths_lead_to_the_city_zero)
add_subdirectory(2316_count_unreachable_pairs_of_nodes_in_an_undirected_graph)
add_subdirectory(2360_longest_cycle_in_a_graph)
add_subdirectory(64_minimum_path_sum)
add_subdirectory(983_minimum_cost_for_tickets)
add_subdirectory(1402_reducing_dishes)
add_subdirectory(141_linked_list_cycle)
add_subdirectory(87_scramble_string)
add_subdirectory(142_linked_list_cycle_II)
add_subdirectory(704_binary_search)
add_subdirectory(2300_successful_pairs_of_spells_and_potions)
add_subdirectory(881_boats_to_save_people)
add_subdirectory(2405_optimal_partition_of_string)
add_subdirectory(217_contains_duplicate)
add_subdirectory(2439_minimize_maximum_of_array)
add_subdirectory(242_valid_anagram)
add_subdirectory(1254_number_of_closed_islands)
add_subdirectory(1_two_sum)
add_subdirectory(1020_number_of_enclaves)
add_subdirectory(49_group_anagrams)
add_subdirectory(133_clone_graph)
add_subdirectory(1857_largest_color_value_in_a_directed_graph)

add_subdirectory(array_challenge)
add_subdirectory(searching_challenge)
add_subdirectory(string_challenge)