cmake_minimum_required(VERSION 3.10)
project(leetcode)

add_subdirectory(128_longest_consecutive_sequence)
add_subdirectory(144_binary_tree_preorder_traversal)
add_subdirectory(958_check_completeness_of_a_binary_tree)
add_subdirectory(106_construct_binary_tree_from_inorder_and_postorder_traversal)
add_subdirectory(208_implement_trie__prefix_tree)
add_subdirectory(1472_design_browser_history)
add_subdirectory(211_design_add_and_search_words_data_structure)
add_subdirectory(605_can_place_flowers)
add_subdirectory(2348_number_of_zero-fille_subarrays)
add_subdirectory(2492_minimum_score_of_a_path_between_two_cities)
add_subdirectory(1319_number_of_operations_to_make_network_connected)
add_subdirectory(1466_reorder_routes_to_make_all_paths_lead_to_the_city_zero)
add_subdirectory(2316_count_unreachable_pairs_of_nodes_in_an_undirected_graph)
add_subdirectory(2360_longest_cycle_in_a_graph)
add_subdirectory(64_minimum_path_sum)
add_subdirectory(983_minimum_cost_for_tickets)
add_subdirectory(1402_reducing_dishes)
add_subdirectory(141_linked_list_cycle)
add_subdirectory(87_scramble_string)
add_subdirectory(142_linked_list_cycle_II)
add_subdirectory(704_binary_search)
add_subdirectory(2300_successful_pairs_of_spells_and_potions)
add_subdirectory(881_boats_to_save_people)
add_subdirectory(2405_optimal_partition_of_string)
add_subdirectory(217_contains_duplicate)
add_subdirectory(2439_minimize_maximum_of_array)
add_subdirectory(242_valid_anagram)
add_subdirectory(1254_number_of_closed_islands)
add_subdirectory(1_two_sum)
add_subdirectory(1020_number_of_enclaves)
add_subdirectory(49_group_anagrams)
add_subdirectory(133_clone_graph)
add_subdirectory(1857_largest_color_value_in_a_directed_graph)
add_subdirectory(20_valid_parentheses)
add_subdirectory(347_top_k_frequent_elements)
add_subdirectory(2390_removing_stars_from_a_string)
add_subdirectory(238_product_of_array_except_self)
add_subdirectory(71_simplify_path)
add_subdirectory(36_valid_sudoku)
add_subdirectory(946_validate_stack_sequences)
add_subdirectory(155_min_stack)
add_subdirectory(516_longest_palindromic_subsequence)
add_subdirectory(344_reverse_string)
add_subdirectory(2218_maximum_value_of_k_coins_from)#i have a problems with this task
add_subdirectory(1639_number_of_ways_to_form_a_target_string_given_a_dictionary)#i have a problems with this task
add_subdirectory(1431_kids_with_the_greatest_number_of_candies)
add_subdirectory(78_subsets)
add_subdirectory(1768_merge_strings_alternately)
add_subdirectory(39_combination_sum)
add_subdirectory(1372_longest_zigzag_path_in_a_binary_tree)
add_subdirectory(46_permutations)
add_subdirectory(662_maximum_width_of_binary_tree)#add tests
add_subdirectory(879_profitable_schemes)#i have a problems with this task
add_subdirectory(1046_last_stone_weight)
add_subdirectory(2336_smallest_number_in_infinite_set)
add_subdirectory(258_add_digits)
add_subdirectory(839_similar_string_groups)
add_subdirectory(150_evaluate_reverse_polish_notation)
add_subdirectory(22_generate_parentheses)
add_subdirectory(739_daily_temperatures)
add_subdirectory(853_car_fleet)
add_subdirectory(84_largest_rectangle_in_histogram)
add_subdirectory(125_valid_palindrome)
add_subdirectory(167_two_sum_II_input_array_Is_sorted)
add_subdirectory(15_3Sum)

add_subdirectory(array_challenge)
add_subdirectory(searching_challenge)
add_subdirectory(string_challenge)